hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/pipe_lambda6.php.exp
File "pipe_lambda6.php", line 9, characters 70-124:
Wrong number of type arguments (expected 0, got 3) (Typing[4101])
  File "expr_tree.hhi", line 13, characters 7-16:
  Definition is here
